# splunk-add-on-for-ucc-example

./: .app-vetting.yaml  .appinspect.expect.yaml  .appinspect.manualcheck.yaml  .fossa.yml  .gitignore  .pre-commit-config.yaml  .pytest.expect  .pytest.expect.baseline  .releaserc  .releaserc.yaml  .semgrepignore  .splunkbase  CLA.md  Dockerfile-saucelabs  Dockerfile-splunk  Dockerfile-tests  README.md  build.sh  demo.py  docker-compose-ci.yml  docker-compose.yml  globalConfig.json  package.json  packagingScript.sh  pyproject.toml  pytest.ini  renovate.json  requirements.txt  requirements_addon_specific.txt  requirements_dev.txt  requirements_py2_dev.txt  semgrep-r2c-ci.yaml  semtag  test_credentials.env
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: .ci-metadata.json  agreements.yaml  build-test-release.yml  cla.yaml  new-test.yml  publish-manual.yaml  release-notes.yaml  release-notes.yml  reuse.yml  semgrep-core.yml  semgrep.yml  semgrepdep.yml  snyk.yaml  unit-tests.yml
.reuse/: dep5
package/: README.txt  app.manifest  semgrep_test.py
package/README/: restmap.conf.spec
package/default/: alert_actions.conf  app.conf  eventtypes.conf  tags.conf
package/lib/: requirements.txt
tests/: O365TATest.py  abc.sh  conftest.py  entrypoint.sh  pytest-ci.ini  pytest.ini  pytest_log  requirements.txt  run_tests.sh  test_management_activity_input.py
tests/escu/: .escu_detections  run_test.py  run_tests.py
tests/knowledge/: conftest.py  pytest-ci.ini  requirements.txt  test_addon.py
tests/modinput_functional/: data_generator.py  (+1 more)
(+45 files in other folders)
