[tool.poetry]
name = "splunk-add-on-for-ucc-example"
version = "0.1.0"
description = ""
authors = ["Splunk Inc, <sales@splunk.com>"]
license = "Splunk-1-2020"

[tool.poetry.dependencies]
python = "^3.7"
splunktaucclib = "5.0.7"

[tool.poetry.dev-dependencies]
splunk-add-on-ucc-framework = "^5.10.1"
lovely-pytest-docker = "^0.2.1"
pytest = "^6.2.4"
pytest-splunk-addon = "^1.11.4"
pytest-expect = "^1.1.0"
pytest-splunk-addon-ui-smartx = "2.1"
pytest-rerunfailures = "^10.1"
splunk-packaging-toolkit = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
