[tool.poetry]
name = "splunk-add-on-for-ucc-example"
version = "0.1.0"
description = ""
authors = ["Splunk Inc, <sales@splunk.com>"]
license = "Splunk-1-2020"

[tool.poetry.dependencies]
python = "^3.7"
splunktaucclib = "^6.0.7"

[tool.poetry.dev-dependencies]
lovely-pytest-docker = "^0.2.1"
pytest = "^6.2.4"
pytest-expect = "^1.1.0"
pytest-rerunfailures = "^12.0"
splunk-packaging-toolkit = "^1.0.1"
pytest-splunk-addon = "^5.0.0"
pytest-splunk-addon-ui-smartx = "^2.3.1"
splunk-add-on-ucc-framework = "5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
